deploy/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: des
---
apiVersion: v1
kind: Namespace
metadata:
  name: prd
