deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ${NAMESPACE}
  labels:
    app: app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: getting-started
